--- a/memeGenerator.html
+++ b/memeGenerator.html
@@ -88,7 +88,7 @@
 	   ctx.strokeText(bottomLine, canvas.width / 2 , canvas.height - 20);
        }
 		
-		
+		<!-- end of my code -->
     }
     
     function saveFile() {
